# PastProjects

./: AE2.main.kts  ImageEditor.java  README.md  READMEAE.md  gene_data_parsing.ipynb  gene_torch.py  questionBank.txt
SanguineGame/: Sanguine  Sanguine.java  SanguineGame.java  TwoViewSanguine.java  deck3config  deckTwo.config  deckone.config  human-interface design
SanguineGame/controller/: ArtificialPlayer.java  FileReader.java  ModelStatusListener.java  PlayerMoveListener.java  PlayerNotifier.java  SanguineController.java
SanguineGame/model/: Board.java  Cell.java  InfluenceGrid.java  Player.java  ReadonlySanguinedModel.java  SanguinePlayingCard.java  SanguineStandard.java  SanguinedCard.java  SanguinedModel.java
SanguineGame/strategy/: ControlBoard.java  FillStrategy.java  MaxRowScore.java  MinMax.java  Moves.java  StratInterface.java  strategy-transcript-control  strategy-transcript-first  strategy-transcript-minmax  strategy-transcript-score
SanguineGame/view/: DimensionClass.java  InFeatures.java  InFrame.java  InPanelView.java  SanguineFrame.java  SanguinePanel.java  SanguineView.java  SanguinedFeatures.java  TextView.java
SimpleTorchProject/: gene_data_parsing.ipynb  gene_torch.py  setup.py
SimpleTorchProject/TorchDun/data/FashionMNIST/: MiniTorch.py
ae3groupproject/: Image.java  ImageEditor.java  Main.java  Pixel.java
untitled/: CMakeLists.txt  LabJackM.h  VoltageJack.cpp
